--- a/MyBink/app/src/main/res/drawable/side_nav_bar.xml
+++ b/MyBink/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
+        android:centerColor="#00b3a1"
+        android:endColor="#009688"
+        android:startColor="#00e6cf"
         android:type="linear" />
 </shape>
