--- a/MyBink/app/src/main/res/values/colors.xml
+++ b/MyBink/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#009688</color>
+    <color name="colorPrimaryDark">#008073</color>
+    <color name="colorAccent">#006e64</color>
+    <color name="actionbar_opacity">#33000000</color>
+
 </resources>
