--- a/MyBink/app/src/main/res/layout/nav_header_main.xml
+++ b/MyBink/app/src/main/res/layout/nav_header_main.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:gravity="center_horizontal"
-        android:text="@string/app_name"
+        android:text="@string/dev_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 </LinearLayout>
