--- a/MyBink/app/src/main/res/values/dimens.xml
+++ b/MyBink/app/src/main/res/values/dimens.xml
@@ -7,4 +7,11 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="navbar_sizes">85dp</dimen>
+
+    <!-- body content -->
+    <dimen name="element_spacing_normal">8dp</dimen>
+    <dimen name="content_padding_normal">16dp</dimen>
+    <dimen name="content_padding_dialog">24dp</dimen>
+
+    <dimen name="text_size_medium">14sp</dimen>
 </resources>
