--- a/MyBink/app/src/main/res/layout/fragment_second.xml
+++ b/MyBink/app/src/main/res/layout/fragment_second.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bink.mybink.view.SecondFragment">
+    tools:context="com.bink.mybink.view.dashboard.SecondFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
