--- a/MyBink/app/src/main/res/values/dimens.xml
+++ b/MyBink/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="content_padding_dialog">24dp</dimen>
 
     <dimen name="text_size_medium">14sp</dimen>
+    <dimen name="card_padding">60dp</dimen>
 </resources>
