--- a/MyBink/app/src/main/res/values/styles.xml
+++ b/MyBink/app/src/main/res/values/styles.xml
@@ -55,4 +55,6 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@color/colorPrimary</item>
     </style>
+
+    <style name="ButtonStyle"><item name="colorButtonNormal">@color/colorAccent</item></style>
 </resources>
